# benchlink

./: .dockerignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  start-dev.sh  vite.config.js
backend/: .env.template  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: engine.py  llm_client.py  schemas.py
backend/app/agent/prompts/: system.txt  templates.py
backend/app/agent/tools/: __init__.py  base.py  bom_analysis.py  buyer_discovery.py  logistics_quote.py  rfq_generator.py  shipment_tracker.py  supplier_search.py
backend/app/api/: activity.py  buyers.py  dashboard.py  health.py  locations.py  logistics.py  router.py  sourcing.py  suppliers.py
backend/app/db/: carrier_seed.py  seed.py  session.py
backend/app/models/: __init__.py  activity.py  buyer.py  carrier.py  location.py  quote.py  rfq.py  shipment.py  sourcing_request.py  supplier.py
backend/app/schemas/: activity.py  buyer.py  dashboard.py  location.py  quote.py  shipment.py  sourcing.py  supplier.py
backend/app/services/: buyer_service.py  dashboard_service.py  logistics_calculator.py  logistics_service.py  sourcing_service.py  supplier_service.py
backend/app/utils/: file_parser.py
backend/tests/: conftest.py
backend/tests/test_agent/: test_engine.py  test_llm_client.py
backend/tests/test_api/: test_health.py  test_suppliers.py
src/: App.jsx  main.jsx
src/hooks/: useTheme.js
src/styles/: App.css  tokens.css
