[project]
name = "benchlink-backend"
version = "0.1.0"
description = "Benchlink Agentic Supply Chain Platform — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.55.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "alembic>=1.14.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
